--- a/src/app/clinical-services/pages/clinic-history-page/clinic-history-page.component.html
+++ b/src/app/clinical-services/pages/clinic-history-page/clinic-history-page.component.html
@@ -1,31 +1,26 @@
-<div class="container mt-3">
+<div class="container mt-3 h-100">
   <div class="d-flex justify-content-between align-items-center">
     <h4>Historias Clínicas</h4>
     <a [routerLink]="['/clinical-services/clinic-history/create']" routerLinkActive="router-link-active" mat-raised-button color="primary" class="button"
       >Crear Historia Clínica</a
     >
   </div>
-  <mat-form-field *ngIf="metaTableNames" class="w-100 mw-400" appearance="outline">
+  <mat-form-field *ngIf="metaTableNames" class="w-100 mw-400 my-3" appearance="outline">
     <mat-label>Nombre de la tabla:</mat-label>
     <mat-select #mySelect (valueChange)="onChangeTable($event)">
       <mat-option *ngFor="let table of metaTableNames" [value]="table.id">{{ table.mtn_tablename }}</mat-option>
     </mat-select>
   </mat-form-field>
-  <!-- <app-custom-table
-      *ngIf="metaTableNames"
-      [data]="metaTableNames"
-      [dataCount]="dataCount"
-      [displayedColumns]="configuration.displayedColumns"
-      [columnsName]="configuration.columnsName"
-      [paginationSize]="configuration.paginationSize"
-      [filters]="configuration.tableFilters"
-      [rowActionButtons]="rowActionButtons"
-      [loading]="loading"
-      (changePage)="onChangePage($event)"
-      (changeFilter)="onChangeFilter($event)"
-      (changeSort)="onChangeSort($event)"
-    ></app-custom-table> -->
+  <app-custom-table
+    *ngIf="clinicHistories && configuration && dataTable"
+    [data]="dataTable"
+    [dataCount]="dataCount"
+    [displayedColumns]="configuration.displayedColumns"
+    [columnsName]="configuration.columnsName"
+    [rowActionButtons]="rowActionButtons"
+    [loading]="loading"
+  ></app-custom-table>
+  <div *ngIf="!dataTable" class="d-flex justify-content-center align-items-center h-100">
+    <h4>Seleccione una tabla para ver sus registros</h4>
+  </div>
 </div>
-<pre *ngIf="clinicHistories">
-    {{ clinicHistories | json }}
-</pre>
