--- a/src/app/stock-modules/classifiers/measure/pages/measure-page/measure-page.component.html
+++ b/src/app/stock-modules/classifiers/measure/pages/measure-page/measure-page.component.html
@@ -1,6 +1,6 @@
 <div class="container mt-3">
   <div class="d-flex justify-content-between align-items-center">
-    <h4>Medida</h4>
+    <h4>Medidas</h4>
     <button (click)="createMeasure()" mat-raised-button color="primary" class="button">Crear Medida</button>
   </div>
   <app-custom-table
