--- a/src/app/stock-modules/classifiers/tax/components/tax-form/tax-form.component.html
+++ b/src/app/stock-modules/classifiers/tax/components/tax-form/tax-form.component.html
@@ -1,5 +1,5 @@
 <div class="form">
-  <h4>{{ data.tax ? 'Editar Sexo' : 'Crear Sexo' }}</h4>
+  <h4>{{ data.tax ? 'Editar Impuesto' : 'Crear Impuesto' }}</h4>
   <mat-divider class="my-4"></mat-divider>
   <form *ngIf="taxForm" [formGroup]="taxForm">
     <mat-form-field class="w-100" appearance="outline">
@@ -10,13 +10,13 @@
     </mat-form-field>
     <mat-form-field class="w-100" appearance="outline">
       <mat-label>Importe fijo:</mat-label>
-      <input matInput formControlName="importe_fijo" type="number"/>
+      <input matInput formControlName="importe_fijo" type="number" />
       <mat-error *ngIf="importeFTaxControl.errors?.required"> {{ 'EL importe fijo es' }} <strong>requerido</strong> </mat-error>
       <mat-error *ngIf="importeFTaxControl.errors?.pattern"> {{ 'El importe fijo es un número' }} </mat-error>
     </mat-form-field>
     <mat-form-field class="w-100" appearance="outline">
       <mat-label>Importe proporcional:</mat-label>
-      <input matInput formControlName="importe_proporcional" type="number"/>
+      <input matInput formControlName="importe_proporcional" type="number" />
       <mat-error *ngIf="importePTaxControl.errors?.required"> {{ 'El importe proporcional es' }} <strong>requerido</strong> </mat-error>
       <mat-error *ngIf="importePTaxControl.errors?.pattern"> {{ 'El importe proporcional es un número' }} </mat-error>
     </mat-form-field>
