--- a/src/app/stock-modules/classifiers/tax/pages/tax-page/tax-page.component.html
+++ b/src/app/stock-modules/classifiers/tax/pages/tax-page/tax-page.component.html
@@ -1,6 +1,6 @@
 <div class="container mt-3">
   <div class="d-flex justify-content-between align-items-center">
-    <h4>Impuesto</h4>
+    <h4>Impuestos</h4>
     <button (click)="createTax()" mat-raised-button color="primary" class="button">Crear Impuesto</button>
   </div>
   <app-custom-table
