--- a/src/app/shared/layout/layout.component.scss
+++ b/src/app/shared/layout/layout.component.scss
@@ -155,3 +155,9 @@ app-layout {
   }
 
 }
+
+.shadow {
+  -webkit-box-shadow: 0 10px 5px #888888;
+  -moz-box-shadow: 0 10px 5px #888888;
+  box-shadow: 0 10px 5px #888888;
+}
