--- a/src/app/shared/layout/layout.component.html
+++ b/src/app/shared/layout/layout.component.html
@@ -27,7 +27,7 @@
         <div class="w-100" fxFlex fxLayout="column" fxLayoutAlign="end end" fxLayoutGap="gappx">
           <footer id="NavBarFooter" class="w-100">
             <mat-toolbar style="height: 100% !important" class="w-100" color="primary">
-              <span class="mat-caption mx-auto">{{ 'Copyright' }} &copy;{{ year }}</span>
+              <span class="mat-caption mx-auto">{{ 'República Ginea Ecuatorial' }} - {{ year }}</span>
             </mat-toolbar>
           </footer>
         </div>
