Arreglar errores con los modules Estado de inventario y estado de movimiento

--- a/src/app/stock-modules/classifiers/invoice-status/pages/invoice-status-page/invoice-status-page.component.html
+++ b/src/app/stock-modules/classifiers/invoice-status/pages/invoice-status-page/invoice-status-page.component.html
@@ -1,7 +1,7 @@
 <div class="container mt-3">
   <div class="d-flex justify-content-between align-items-center">
     <h4>Estado de Facturas</h4>
-    <button (click)="createInvoiceStatus()" mat-raised-button color="primary" class="button">Crear Esado de Factura</button>
+    <button (click)="createInvoiceStatus()" mat-raised-button color="primary" class="button">Crear Estado de Factura</button>
   </div>
   <app-custom-table
     *ngIf="invoiceStatus"
