--- a/src/app/stock-modules/classifiers/inventory-status/pages/inventory-status-page/inventory-status-page.component.html
+++ b/src/app/stock-modules/classifiers/inventory-status/pages/inventory-status-page/inventory-status-page.component.html
@@ -1,7 +1,7 @@
 <div class="container mt-3">
   <div class="d-flex justify-content-between align-items-center">
     <h4>Estado de Inventarios</h4>
-    <button (click)="createInventoryStatus()" mat-raised-button color="primary" class="button">Crear Esado de Factura</button>
+    <button (click)="createInventoryStatus()" mat-raised-button color="primary" class="button">Crear Estado de Inventario</button>
   </div>
   <app-custom-table
     *ngIf="inventoryStatus"
