--- a/src/app/stock-modules/classifiers/move-status/components/move-status-form.component/move-status-form.component.html
+++ b/src/app/stock-modules/classifiers/move-status/components/move-status-form.component/move-status-form.component.html
@@ -1,7 +1,7 @@
 <div class="form">
-  <h4>{{ data.inventoryState ? 'Editar Estedo de Inventario' : 'Crear Estado de Inventario' }}</h4>
+  <h4>{{ data.moveStatus ? 'Editar Estado de Movimiento' : 'Crear Estado de Movimiento' }}</h4>
   <mat-divider class="my-4"></mat-divider>
-  <form *ngIf="inventoryStateForm" [formGroup]="inventoryStateForm">
+  <form *ngIf="moveStatusForm" [formGroup]="moveStatusForm">
     <mat-form-field class="w-100" appearance="outline">
       <mat-label>Descripción:</mat-label>
       <input matInput formControlName="descripcion" />
@@ -12,8 +12,8 @@
   <mat-divider class="my-4"></mat-divider>
   <div class="d-flex align-items-center justify-content-end">
     <button (click)="onCancel()" mat-raised-button color="default" class="button mx-2">Cancelar</button>
-    <button (click)="onSubmit(inventoryStateForm.value)" [disabled]="!inventoryStateForm.valid" mat-raised-button color="primary" class="button">
-      {{ data.inventoryState ? 'Aceptar' : 'Crear' }}
+    <button (click)="onSubmit(moveStatusForm.value)" [disabled]="!moveStatusForm.valid" mat-raised-button color="primary" class="button">
+      {{ data.moveStatus ? 'Aceptar' : 'Crear' }}
     </button>
   </div>
 </div>
