--- a/src/app/indicator-module/indicator-type/components/indicator-type-form/indicator-type-form.component.html
+++ b/src/app/indicator-module/indicator-type/components/indicator-type-form/indicator-type-form.component.html
@@ -1,7 +1,7 @@
 <div class="form">
-  <h4>{{ data.attribute ? 'Editar Atributo' : 'Crear Atributo' }}</h4>
+  <h4>{{ data.indicatorType ? 'Editar Tipo de Indicador' : 'Crear Tipo de Indicador' }}</h4>
   <mat-divider class="my-4"></mat-divider>
-  <form *ngIf="attributeForm" [formGroup]="attributeForm">
+  <form *ngIf="indicatorTypeForm" [formGroup]="indicatorTypeForm">
     <mat-form-field class="w-100" appearance="outline">
       <mat-label>Descripción:</mat-label>
       <input matInput formControlName="descripcion" />
@@ -12,8 +12,8 @@
   <mat-divider class="my-4"></mat-divider>
   <div class="d-flex align-items-center justify-content-end">
     <button (click)="onCancel()" mat-raised-button color="default" class="button mx-2">Cancelar</button>
-    <button (click)="onSubmit(attributeForm.value)" [disabled]="!attributeForm.valid" mat-raised-button color="primary" class="button">
-      {{ data.attribute ? 'Aceptar' : 'Crear' }}
+    <button (click)="onSubmit(indicatorTypeForm.value)" [disabled]="!indicatorTypeForm.valid" mat-raised-button color="primary" class="button">
+      {{ data.indicatorType ? 'Aceptar' : 'Crear' }}
     </button>
   </div>
 </div>
