--- a/src/app/error/lost-connection/lost-connection.component.scss
+++ b/src/app/error/lost-connection/lost-connection.component.scss
@@ -11,8 +11,7 @@
 
   }
 
-  font-family: 'Poppins',
-  sans-serif !important;
+  font-family: 'Montserrat', sans-serif;
 
   @media (max-width:599px) {
     .title {
