--- a/src/assets/styles/variable.scss
+++ b/src/assets/styles/variable.scss
@@ -5,9 +5,9 @@ Email: niravjoshi87@gmail.com
 File: scss
 */
 
-$bodyfont : 'Poppins',
+$bodyfont : 'Montserrat',
 sans-serif;
-$headingfont : 'Poppins',
+$headingfont : 'Montserrat',
 sans-serif;
 
 @import '~@angular/material/theming';
