--- a/src/assets/scss/theme/_variables.scss
+++ b/src/assets/scss/theme/_variables.scss
@@ -3,7 +3,7 @@
 @import '~@angular/material/theming';
 @include mat-core();
 $custom-typography: mat-typography-config(
-  $font-family: 'Poppins',
+  $font-family: 'Montserrat'
 );
 // Override the typography in the core CSS.
 @include mat-core($custom-typography);
