--- a/src/app/clinical-services/components/dynamic-table-form/dynamic-table-form.component.html
+++ b/src/app/clinical-services/components/dynamic-table-form/dynamic-table-form.component.html
@@ -18,8 +18,8 @@
         <mat-form-field class="mw-400 minw-200" appearance="outline">
           <mat-label>Nombre del campo:</mat-label>
           <input matInput formControlName="mtf_fieldname" />
-          <mat-error *ngIf="metaFieldForm.controls['mtf_fieldname'].invalid"> {{ 'El nombre es' }} <strong>requerido</strong> </mat-error>
-          <mat-error *ngIf="metaFieldForm.controls['mtf_fieldname'].errors?.pattern"> {{ 'El nombre del campo no puede ser Id' }}  </mat-error>
+          <mat-error *ngIf="metaFieldForm.controls['mtf_fieldname'].errors?.required"> {{ 'El nombre es' }} <strong>requerido</strong> </mat-error>
+          <mat-error *ngIf="metaFieldForm.controls['mtf_fieldname'].errors?.hasId"> {{ 'El nombre del campo no puede ser Id' }}  </mat-error>
         </mat-form-field>
         <mat-form-field class="mw-400 minw-200 mx-2" appearance="outline">
           <mat-label>Tipo de campo:</mat-label>
