cambiando info +(240)###-###### por +(240) ### ######

--- a/src/app/security-module/user/components/user-form/user-form.component.html
+++ b/src/app/security-module/user/components/user-form/user-form.component.html
@@ -264,7 +264,7 @@
             </mat-form-field>
           </div>
         </div>
-       
+
         <div class="card p-3">
           <h5>Dirección y Contacto</h5>
           <div class="row" *ngIf="personFormGroup" [formGroup]="personFormGroup">
@@ -376,12 +376,12 @@
             <div class="col-lg-6 col-md-12">
               <mat-form-field class="w-100" appearance="outline">
                 <mat-label>Teléfono de Emergencia:</mat-label>
-                <input matInput formControlName="telefono_emergencia"  matTooltip="+(240)###-######" />
+                <input matInput formControlName="telefono_emergencia"  matTooltip="+(240) ### ######" />
                 <mat-error *ngIf="personFormGroup.controls['telefono_emergencia'].errors?.required">
                   {{ 'El Teléfono de Emergencia es ' }} <strong>requerido</strong>
                 </mat-error>
                 <mat-error *ngIf="personFormGroup.controls['telefono_emergencia'].errors?.pattern">
-                  {{ 'El formato del teléfono de emergencia es ' }} <strong>incorrecto "+(240)###-######"</strong>
+                  {{ 'El formato del teléfono de emergencia es ' }} <strong>incorrecto "+(240) ### ######"</strong>
                 </mat-error>
               </mat-form-field>
             </div>
@@ -390,12 +390,12 @@
             <div class="col-lg-6 col-md-12">
               <mat-form-field class="w-100" appearance="outline">
                 <mat-label>Teléfono de casa:</mat-label>
-                <input matInput formControlName="telefono_casa"  matTooltip="+(240)###-######" />
+                <input matInput formControlName="telefono_casa"  matTooltip="+(240) ### ######" />
                 <mat-error *ngIf="personFormGroup.controls['telefono_casa'].errors?.required">
                   {{ 'El Teléfono de casa es ' }} <strong>requerido</strong>
                 </mat-error>
                 <mat-error *ngIf="personFormGroup.controls['telefono_casa'].errors?.pattern">
-                  {{ 'El formato del teléfono de casa es ' }} <strong>incorrecto "+(240)###-######"</strong>
+                  {{ 'El formato del teléfono de casa es ' }} <strong>incorrecto "+(240) ### ######"</strong>
                 </mat-error>
               </mat-form-field>
             </div>
@@ -403,12 +403,12 @@
             <div class="col-lg-6 col-md-12">
               <mat-form-field class="w-100" appearance="outline">
                 <mat-label>Teléfono del Trabajo:</mat-label>
-                <input matInput formControlName="telefono_trabajo"  matTooltip="+(240)###-######" />
+                <input matInput formControlName="telefono_trabajo"  matTooltip="+(240) ### ######" />
                 <mat-error *ngIf="personFormGroup.controls['telefono_trabajo'].errors?.required">
                   {{ 'El Teléfono del trabajo es' }} <strong>requerido</strong>
                 </mat-error>
                 <mat-error *ngIf="personFormGroup.controls['telefono_trabajo'].errors?.pattern">
-                  {{ 'El formato del teléfono del trabajo es' }} <strong>incorrecto "+(240)###-######"</strong>
+                  {{ 'El formato del teléfono del trabajo es' }} <strong>incorrecto "+(240) ### ######"</strong>
                 </mat-error>
               </mat-form-field>
             </div>
@@ -417,12 +417,12 @@
             <div class="col-lg-6 col-md-12">
               <mat-form-field class="w-100" appearance="outline">
                 <mat-label>Teléfono móvil:</mat-label>
-                <input matInput formControlName="telefono_movil"  matTooltip="+(240)###-######" />
+                <input matInput formControlName="telefono_movil"  matTooltip="+(240) ### ######" />
                 <mat-error *ngIf="personFormGroup.controls['telefono_movil'].errors?.required">
                   {{ 'El Teléfono móvil es' }} <strong>requerido</strong>
                 </mat-error>
                 <mat-error *ngIf="personFormGroup.controls['telefono_movil'].errors?.pattern">
-                  {{ 'El formato del teléfono móvil es' }} <strong>incorrecto "+(240)###-######"</strong>
+                  {{ 'El formato del teléfono móvil es' }} <strong>incorrecto "+(240) ### ######"</strong>
                 </mat-error>
               </mat-form-field>
             </div>
