--- a/src/app/stock-modules/classifiers/provider/components/provider-form/provider-form.component.html
+++ b/src/app/stock-modules/classifiers/provider/components/provider-form/provider-form.component.html
@@ -28,9 +28,9 @@
         <!-- telefono -->
         <mat-form-field class="w-100" appearance="outline">
           <mat-label>Teléfono:</mat-label>
-          <input matInput formControlName="telefono" matTooltip="+(240)###-######" />
+          <input matInput formControlName="telefono" matTooltip="+(240) ### ######" />
           <mat-error *ngIf="telefonoControl.errors?.required"> {{ 'El teléfono es' }} <strong>requerida</strong> </mat-error>
-          <mat-error *ngIf="telefonoControl.errors?.pattern">  {{ 'El formato del teléfono es ' }} <strong>incorrecto "+(240)###-######"</strong> </mat-error>
+          <mat-error *ngIf="telefonoControl.errors?.pattern">  {{ 'El formato del teléfono es ' }} <strong>incorrecto "+(240) ### ######"</strong> </mat-error>
         </mat-form-field>
       </div>
       <div class="col-lg-6 col-md-12">
