validaciones alm_caja y adm_sistema

--- a/src/app/clinical-services/systemmanager/components/systemmanager-form/systemmanager-form.component.html
+++ b/src/app/clinical-services/systemmanager/components/systemmanager-form/systemmanager-form.component.html
@@ -4,8 +4,9 @@
   <form *ngIf="systemmanagerForm" [formGroup]="systemmanagerForm">
     <mat-form-field class="w-100" appearance="outline">
       <mat-label>Descripcion</mat-label>
-      <input matInput formControlName="descripcion" />
+      <input matInput formControlName="descripcion" maxlength="255"/>
       <mat-error *ngIf="descriptionControl.errors?.required"> {{ 'La descripción es' }} <strong>requerido</strong> </mat-error>
+      <mat-error *ngIf="descriptionControl.errors?.maxlength"> {{ 'La descripción es' }} <strong>no puede ser mayor de 255 caracteres</strong> </mat-error>
     </mat-form-field>
   </form>
   <mat-divider class="my-4"></mat-divider>
@@ -16,3 +17,4 @@
     </button>
   </div>
 </div>
+
